<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GO Launcher EX</string>
    <string name="ok">OK</string>
    <string name="cancle">Cancel</string>
    <string name="tabs_allApps">All</string>
    <string name="tabs_recentApps">Recent</string>
    <string name="tabs_processManagement">Running</string>
    <string name="btns_memory">Memory:</string>
    <string name="btns_runninginfo">Info</string>
    <string name="btns_runninglock">Lock app</string>
    <string name="btns_runningunlock">Unlock app</string>
    <string name="menuitem_sorticon">Sorting</string>
    <string name="menuitem_createfolder">New folder</string>
    <string name="menuitem_appfuncSetting">Settings</string>
    <string name="menuitem_hide_tilt">Hide app</string>
    <string name="locklist">Select the apps need to be locked</string>
    <string name="closeicontext">Close</string>
    <string name="lock2text">Lock</string>
    <string name="gototext">Goto</string>
    <string name="unlock2text">Unlock</string>
    <string name="infotext">Info</string>
    <string name="dlg_promanageTitle">Attention</string>
    <string name="dlg_promanageContent">All running programs will be closed !</string>
    <string name="dlg_recentContent">All history will be cleared !</string>
    <string name="dlg_activityNotFound">The application cannot be found. Remove it from App Drawer?</string>
    <string name="dlg_deleteFolder">Attention</string>
    <string name="dlg_deleteFolderContent">Delete the folder and release apps into app drawer?</string>
    <string name="sort_processing">Sorting, please wait</string>
    <string name="initialization">Initialization in progress</string>
    <string name="dlg_sortChangeTitle">Sorting mode of icon</string>
    <string name="dlg_wallPaperTitle">Wallpaper</string>
    <string name="menuitem_wallpaper">Wallpaper</string>
    <string name="menuitem_addprogram">Add</string>
    <string name="menuitem_search">Search</string>
    <string name="menuitem_setting">Settings</string>
    <string name="menuitem_moresetting">Preferences</string>
    <string name="menuitem_desksetting">Screen settings</string>
    <string name="menuitem_screensetting">Edit</string>
    <string name="menuitem_themesetting">Themes</string>
    <string name="menuitem_gowidget">GO Widget</string>
    <string name="menuitem_notification">Notification</string>
    <string name="menuitem_language">Language settings</string>
    <string name="menuitem_handbook">GO HandBook</string>
    <string name="menuitem_update">Update</string>
    <string name="menuitem_rate">Rate</string>
    <string name="menuitem_feedback">Feedback</string>
    <string name="menuitem_snapshot">ScreenShot</string>
    <string name="menuitem_expend">Status bar</string>
    <string name="menuitem_gostore">GO Store</string>
    <string name="menuitem_facebook_like_us">Like Us</string>
    <string name="menuitem_lockdesktop_lock">Lock Screen</string>
    <string name="menuitem_lockdesktop_restart">Restart</string>
    <string name="menuitem_lockdesktop_unlock">Unlock Screen</string>
    <string name="menuitem_one_x_guide">Optimized</string>
    <string name="lockdesktop_dialog_context">Attention:As you lock screen,your screen/preview/app drawer will not be edited,long-press does not work.You can click this button again to unlock screen.</string>
    <string name="delete">Delete</string>
    <string name="menuitem_change_icon_dock">Replace</string>
    <string name="menuitem_change_gesture_dock">Gesture</string>
    <string name="current">current</string>
    <string name="add_app_icon">Shortcut</string>
    <string name="add_widget">Widget</string>
    <string name="add_widget_failed">Not enough room, choose another screen or add a new one.</string>
    <string name="desktop_general_setting">General Settings</string>
    <string name="desktop_more_setting">More Settings</string>
    <string name="home_gesture_hint">Home key action</string>
    <string name="up_gesture_hint">Glide up action</string>
    <string name="down_gesture_hint">Glide down action</string>
    <string name="oper_gesture">Key and gestures</string>
    <string name="theme_display">Theme display</string>
    <string name="statusbar">Show status bar</string>
    <string name="statusbar_hint">Show/Hide status bar</string>
    <string name="screen_looping">Screens scroll circularly</string>
    <string name="screen_looping_summary">Scroll past the last homescreen will get to the first one</string>
    <string name="wallpaper_scrolling">Wallpaper mode</string>
    <string name="wallpaper_scrolling_summary">Scroll wallpaper while you scroll homescreens.\nOn:diploid width Off:haploid width</string>
    <string name="show_app_name">App icon labels</string>
    <string name="show_app_name_hint">Show/Hide icon labels on homescreen</string>
    <string name="appfunc_show_app_name_hint">Show/Hide icon labels in App Drawer</string>
    <string name="appfunc_show_search_hint">Show/Hide search in App Drawer</string>
    <string name="appfunc_show_app_update">Notify update info on app icon</string>
    <string name="show_neglect_app_hint">Show/Hide locked apps</string>
    <string name="screen_rows_cols">Grid size</string>
    <string name="screen_auto_fit_items">Auto-fit Items</string>
    <string name="screen_auto_fit_items_hint">Resizes widgets and icons to fit the grid size</string>
    <string name="screen_grid_diy">Custom grids</string>
    <string name="screen_rows_cols_hint">Define number of apps on each screen</string>
    <string name="screen_row_dialog_msg">Set this number as the row number</string>
    <string name="screen_column_dialog_msg">Set this number as the column number</string>
    <string name="screen_indicator">Screen indicator</string>
    <string name="screen_indicator_hint">Show an indicator for which home screen you are currently on</string>
    <string name="screen_indicator_autohide">Auto-hide screen indicator</string>
    <string name="advanced_setting">Advanced settings</string>
    <string name="func_app_setting">App drawer settings</string>
    <string name="func_app_running">Running tab</string>
    <string name="func_app_grid_setting">Grid size</string>
    <string name="func_app_grid_setting_hint">App drawer row/column selection</string>
    <string name="func_app_show_tab_row">Show app drawer tab</string>
    <string name="func_app_show_tab_row_hint">Show/Hide tab row</string>
    <string name="func_app_show_app_name">Show app drawer app labels</string>
    <string name="func_app_show_search">Show app drawer search</string>
    <string name="func_app_show_neglect_app">Show locked apps</string>
    <string name="func_app_flip_horizontal">App drawer scrolling orientation</string>
    <string name="func_app_flip_horizontal_hint">Scrolling orientation selection</string>
    <string name="func_app_lock_list">Choose locked apps</string>
    <string name="func_app_lock_list_hint">Locked apps will not be killed when click \"Close All Programs\"</string>
    <string name="func_app_glide_up">Enable glide up action</string>
    <string name="func_app_glide_down">Enable glide down action</string>
    <string name="func_app_glide_up_summary">Show/hide app drawer tab</string>
    <string name="func_app_glide_down_summary">Show/hide app drawer action bar</string>
    <string name="high_quality_drawing">High quality drawing</string>
    <string name="high_quality_drawing_summary">Solve screen mess, but it may reduce performance.</string>
    <string name="transparent_statusbar">Support transparent status bar</string>
    <string name="transparent_statusbar_summary">It may reduce performance, please turn it off when you meet any problems.</string>
    <string name="permanentmemory_enable">System persistent</string>
    <string name="permanentmemory_enablesummary">Keep GO Launcher persistent may cause unstable error,please turn it off when you meet any errors.</string>
    <string name="prevent_force_close">Prevent force close</string>
    <string name="prevent_force_close_summary">Prevent force-closes when running out of memory</string>
    <string name="check_version">Check version</string>
    <string name="share_app">Share application</string>
    <string name="aboutGo">About GO Launcher EX</string>
    <string name="share_app_summary">Share GO Launcher EX with friends</string>
    <string name="rate_go_launcher">Rate GO Launcher EX</string>
    <string name="rate_go_launcher_summary">Rate GO Launcher EX in Android Market</string>
    <string name="feedback">Send feedback</string>
    <string name="feedback_summary">Send feedback to GO Launcher EX Team</string>
    <string name="joinus_info">Join us</string>
    <string name="joinus_info_summary">Recruitment</string>
    <string name="copyright_info">Copyright info</string>
    <string name="copyright_info_summary">Copyright © 2004-2013  All Rights Reserved. \n3G.cn</string>
    <string name="beta_updates_info">Check for beta updates</string>
    <string name="beta_updates_info_summary">Check for latest beta version of GO Launcher</string>
    <string name="reset_to_default_title">Reset to default</string>
    <string name="restore_db_title">Restore settings</string>
    <string name="key_appfunc_show_setting">App drawer display</string>
    <string name="clean_dirty_data">Clean rubbish data</string>
    <string name="clean_dirty_data_summary">Check and clean overlapping shortcuts or widgets on home screen</string>
    <string name="task_killer">Task Manager</string>
    <string name="contact">Contacts</string>
    <string name="calendar">Calendar</string>
    <string name="sms">Message</string>
    <string name="search">Search</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="clock">Clock</string>
    <string name="note">Note</string>
    <string name="sinaweibo">Sina Weibo</string>
    <string name="onoff">Switch</string>
    <string name="powermaster">GO PowerMaster</string>
    <string name="weather">GO Weather</string>
    <string name="gosms">GO SMS Pro</string>
    <string name="migrate_app_tip_title">Copy Home Screen</string>
    <string name="migrate_message">Copy other Launcher icon to GO Launcher</string>
    <string name="summary_nonbackup">No backup</string>
    <string name="onexguidtitle">Check for 4.0.4 update and use the right settings</string>
    <string name="onexguidsummary">Hide ONE X/S 3-dots bar</string>
    <string name="title_backup_setting">Backup &amp; restore</string>
    <string name="backup_desk">Back up GO Launcher</string>
    <string name="reset_to_default_summary">Restore to the latest backup</string>
    <string name="summary_reset">Reset GO Launcher to default settings</string>
    <string name="title_local_backup">Local backup</string>
    <string name="title_more_backup">More backups</string>
    <string name="go_backup">GO Backup</string>
    <string name="summary_go_backup">Supports multi-backup and online backup</string>
    <string name="check_language_title">Language setting</string>
    <string name="setting_help_pref">Q&amp;A</string>
    <string name="pref_help_hint"> Learn how to use GO Launcher</string>
    <string name="media_plugin_setting_summary">Manage photos, videos and music in app drawer</string>
    <string name="desk_setting_function_gesture">Gesture settings</string>
    <string name="facebook_backup_title">Facebook backup</string>
    <string name="facebook_backup">Backup via Facebook</string>
    <string name="facebook_restore">Restore via Facebook</string>
    <string name="facebook_restore_summary">Restore to the latest backup in Server</string>
    <string name="download_mediamanagement_plugin_dialog_title">Media manager plugin</string>
    <string name="plugin_setting">Plugins settings</string>
</resources>