<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myAndroid="http://schemas.android.com/apk/res/com.gau.go.launcherex"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/desk_setting_bg_color"
    android:orientation="vertical" >

    <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingPageTitleView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        myAndroid:titleText="@string/advanced_setting" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/desk_setting_view_padding"
            android:paddingRight="@dimen/desk_setting_view_padding" >

            <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingTitleView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                myAndroid:titleText="@string/advanced_setting" />

            <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemCheckBoxView
                android:id="@+id/high_quality_drawing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                myAndroid:summaryText="@string/high_quality_drawing_summary"
                myAndroid:titleText="@string/high_quality_drawing" />

            <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemCheckBoxView
                android:id="@+id/transparent_statusbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                myAndroid:summaryText="@string/transparent_statusbar_summary"
                myAndroid:titleText="@string/transparent_statusbar" />

            <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemCheckBoxView
                android:id="@+id/permanentmemory_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                myAndroid:summaryText="@string/permanentmemory_enablesummary"
                myAndroid:titleText="@string/permanentmemory_enable" />

            <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemCheckBoxView
                android:id="@+id/prevent_force_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                myAndroid:summaryText="@string/prevent_force_close_summary"
                myAndroid:titleText="@string/prevent_force_close" />

            <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemBaseView
                android:id="@+id/clean_dirty_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                myAndroid:summaryText="@string/clean_dirty_data_summary"
                myAndroid:titleText="@string/clean_dirty_data" />

            <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemBaseView
                android:id="@+id/language_setting"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/desk_setting_gosetting_item_height"
                myAndroid:isHiddenBottomLine="true"
                myAndroid:titleText="@string/check_language_title" />

            <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingTitleView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                myAndroid:titleText="@string/plugin_setting" />

            <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemBaseView
                android:id="@+id/migrate_app_tip_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                myAndroid:summaryText="@string/migrate_message"
                myAndroid:titleText="@string/migrate_app_tip_title" />

            <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemBaseView
                android:id="@+id/onexguide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                myAndroid:isHiddenBottomLine="true"
                myAndroid:summaryText="@string/onexguidtitle"
                myAndroid:titleText="@string/onexguidsummary" />

            <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemBaseView
                android:id="@+id/fun_app_ui_media_plugin"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/desk_setting_gosetting_item_height"
                myAndroid:isHiddenBottomLine="true"
                myAndroid:summaryText="@string/media_plugin_setting_summary"
                myAndroid:titleText="@string/download_mediamanagement_plugin_dialog_title"
                myAndroid:titleTextSize="@dimen/desk_setting_main_text_size" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>